--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,5 @@ bin-release/
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
 
-*.DS_Store
+.DS_Store
+
